trunk/Archive2/54/5a6e7e7a10f8d6/output
main.cpp:1:1: error: unknown type name 'http'
http://coliru.stacked-crooked.com/a/ed8b76b41316a7da
^
main.cpp:1:5: error: expected unqualified-id
http://coliru.stacked-crooked.com/a/ed8b76b41316a7da
    ^
2 errors generated.
